--- a/Analysis_Report_01_amplicons.Rmd
+++ b/Analysis_Report_01_amplicons.Rmd
@@ -34,9 +34,10 @@ In addition to a minimum of 3-4 figures/tables (and associated captions), you sh
 library("dplyr")
 library("tidyr")
 library("knitr")
+library("ggplot2")
 
 # this package allows for the easy inclusion of literature citations in our Rmd
-# more info here: https://github.com/crsh/citr 
+# more info here: https://github.com/crsh/citr
 # and here:
 # http://rmarkdown.rstudio.com/authoring_bibliographies_and_citations.html
 library("citr")
@@ -44,21 +45,170 @@ library("citr")
 # These are the primary packages well use to clean and analyze the data
 library("dada2")
 
+# This to export a fasta of our final denoised sequence variants
+library("seqinr")
+
+# To install this you have to install from GitHub:
+# nolint -- install.packages("devtools")
+# nolint -- devtools::install_github("leffj/mctoolsr")
+library("mctoolsr")
+
 # And this to visualize our results
 library("phyloseq")
 ```
 
-```{r make-read-in-data-function}
+```{r extract-sample-and-file-names}
 # NOTE: Much of the following follows the DADA2 tutorials available here:
 # https://benjjneb.github.io/dada2/tutorial.html
 # Accessed October 19, 2017
 
+path <- "data/raw_data"
 
+# Sort ensures forward/reverse reads are in same order
+filenames_forward_reads <- sort(list.files(path, pattern = ".fastq"))
+
+# Extract sample names, assuming filenames have format: SAMPLENAME_XXX.fastq
+sample_names <- sapply(strsplit(filenames_forward_reads, "\\."), `[`, 1)
+
+# Specify the full path to the filenames_Forward_reads
+filenames_forward_reads <- file.path(path, filenames_forward_reads)
+```
+
+```{r check-quality-plots}
+# Example plots of just the first two samples
+plotQualityProfile(filenames_forward_reads[1:20])
+```
+
+```{r filter-reads}
+# Place filtered files in filtered/ subdirectory
+filter_path <- file.path("output", "filtered")
+filtered_reads_path <- file.path(filter_path,
+                                 paste0(sample_names,
+                                        "_filt.fastq.gz"))
+
+# See ?filterAndTrim for details on the parameters
+# See here for adjustments for 454 data:
+# https://benjjneb.github.io/dada2/
+#     faq.html#can-i-use-dada2-with-my-454-or-ion-torrent-data
+filtered_output <- filterAndTrim(fwd = filenames_forward_reads,
+                                 filt = filtered_reads_path,
+                                 maxLen = 225,
+                                 maxN = 0,
+                                 maxEE = 3,
+                                 truncQ = 2,
+                                 rm.phix = TRUE,
+                                 compress = TRUE,
+                                 multithread = FALSE)
+```
+
+```{r filtered-read-counts-table}
+# produce nicely-formatted markdown table of read counts
+# before/after trimming
+kable(filtered_output,
+      col.names = c("Reads In",
+                    "Reads Out"))
+```
+
+```{r learn-errors}
+errors_forward_reads <- learnErrors(filtered_reads_path,
+                                    multithread = FALSE)
+```
+
+```{r visualize-errors-with-plots}
+plotErrors(errors_forward_reads,
+           nominalQ = TRUE)
+```
+
+```{r dereplicate-sequences}
+dereplicated_forward_reads <- derepFastq(filtered_reads_path,
+                                         verbose = TRUE)
+
+# Name the derep-class objects by the sample names
+names(dereplicated_forward_reads) <- sample_names
+```
+
+```{r run-dada}
+# parameters adjusted based on recommendations for 454 data here:
+# https://benjjneb.github.io/dada2/
+#     faq.html#can-i-use-dada2-with-my-454-or-ion-torrent-data
+dada_forward_reads <- dada(dereplicated_forward_reads,
+                           err = errors_forward_reads,
+                           HOMOPOLYMER_GAP_PENALTY = -1,
+                           BAND_SIZE = 32)
+
+# check dada results
+dada_forward_reads
+```
+
+```{r make-sequence-table}
+sequence_table <- makeSequenceTable(dada_forward_reads)
+```
+
+The output table has `r nrow(sequence_table)` rows (samples) and `r ncol(sequence_table)` columns (sequence variants).
+
+```{r histogram-of-sequence-lengths}
+hist(nchar(getSequences(sequence_table)),
+     main = "Histogram of fingal sequence variant lengths",
+     xlab = "Sequence length in bp")
+```
+
+```{r remove-chimeras}
+sequence_table_nochim <- removeBimeraDenovo(sequence_table,
+                                            method = "consensus",
+                                            multithread = FALSE,
+                                            verbose = TRUE)
+
+non_chimeric_reads <- round(sum(sequence_table_nochim) / sum(sequence_table),
+                            digits = 4) * 100
+```
+
+After removing chimeras, we were left with `r non_chimeric_reads`% of our cleaned reads.
+
+```{r table-of-pipeline-read-counts}
+get_n <- function(x) sum(getUniques(x))
+track <- cbind(filtered_output,
+               sapply(dada_forward_reads, get_n),
+               rowSums(sequence_table),
+               rowSums(sequence_table_nochim))
+colnames(track) <- c("Input",
+                     "Filtered",
+                     "Denoised",
+                     "Sequence Table",
+                     "Non-chimeric")
+rownames(track) <- sample_names
+kable(track)
+```
+
+```{r assign-taxonomy}
+taxa <- assignTaxonomy(sequence_table_nochim,
+                       "data/training/rdp_train_set_16.fa.gz",
+                       multithread = FALSE,
+                       tryRC = TRUE) # also check with seq reverse compliments
+
+unname(taxa)
+```
+
+```{r extract-sequences-to-fasta}
+# function taken from https://github.com/benjjneb/dada2/issues/88
+export_taxa_table_and_seqs <- function(sequence_table_nochim,
+                                       file_seqtab,
+                                       file_seqs) {
+  seqtab_t <- as.data.frame(t(sequence_table_nochim))
+  seqs <- row.names(seqtab_t)
+  row.names(seqtab_t) <- seqs
+  outlist <- list(data_loaded = seqtab_t)
+  mctoolsr::export_taxa_table(outlist, file_seqtab)
+  seqs <- as.list(seqs)
+  seqinr::write.fasta(seqs, row.names(seqtab_t), file_seqs)
+}
+
+export_taxa_table_and_seqs(sequence_table_nochim,
+                           "output/sequence_variants_table.txt",
+                           "output/sequence_variants_seqs.fa")
 ```
 
 
-
-```{r read-in-metadata-and-join}
+```{r read-in-metadata-and-create-phyloseq}
 # Next we want to read in the metadata file so we can add that in too
 # This is not a csv file, so we have to use a slightly different syntax
 # here the `sep = "\t"` tells the function that the data are tab-delimited
@@ -68,10 +218,40 @@ metadata_in <- read.table(paste0("data/metadata/",
                                  "fierer_forensic_hand_mouse_SraRunTable.txt"),
                           sep = "\t",
                           header = TRUE,
-                          stringsAsFactors = FALSE)
+                          stringsAsFactors = FALSE,
+                          row.names = 6) # sets sample IDs to row names
 
 
+tree_in <- read_tree("output/sequence_variants_MAFFT_RAxML.newick")
+
+# Construct phyloseq object (straightforward from dada2 outputs)
+phyloseq_obj <- phyloseq(otu_table(sequence_table_nochim,
+                                   taxa_are_rows = FALSE),
+                         sample_data(metadata_in),
+                         tax_table(taxa),
+                         phy_tree(tree_in))
 ```
+
+```{r example-phyloseq-plot-1}
+plot_richness(phyloseq_obj,
+              x = "env_material_s",
+              measures = c("Shannon", "Simpson"),
+              color = "sex_s") +
+  xlab("Sample origin") +
+  geom_jitter(width = 0.2) +
+  theme_bw()
+```
+
+**Figure 1**: Alpha diversity measures of the two sample types, colored by gender.
+
+```{r example-phyloseq-plot-2}
+plot_tree(phyloseq_obj,
+          color = "sex_s",
+          ladderize = TRUE) # this arranges the tree branches from short to long
+```
+
+**Figure 2**: Inferred phylogeny of sequences, with points on tips representing samples within which each particular taxa occurred.
+
 
 # Discussion
 
