--- a/Analysis_Report_01_amplicons.Rmd
+++ b/Analysis_Report_01_amplicons.Rmd
@@ -8,6 +8,7 @@ csl: bioinformatics.csl
 ---
 
 # Introduction
+QUESTION: What makes male and female bacteria different? -differences in microbrial communities in both of them?
 
 Add about 1.5-2 pages here. Must cite at least 5 peer reviewed articles.
 
@@ -35,6 +36,9 @@ library("dplyr")
 library("tidyr")
 library("knitr")
 library("ggplot2")
+
+#load RColorBrewer package
+library("RColorBrewer")
 
 # this package allows for the easy inclusion of literature citations in our Rmd
 # more info here: https://github.com/crsh/citr
@@ -267,6 +271,30 @@ phyloseq_obj <- phyloseq(otu_table(sequence_table_nochim,
                          phy_tree(tree_in)) # phylogeny from sequence variants
 ```
 
+```{r histogram-female-sebum}
+joined_blast_data_metadata %>%
+filter(env_material_s == "sebum") %>%
+filter(sex_s == "female") %>%
+  pull(pident) %>%
+  hist(main = "Female Percent Identity of Sebum",
+       xlab = "Percent",
+       col = "plum")
+```
+
+**FIGUREEE**:
+
+```{r histogram-male-sebum}
+joined_blast_data_metadata %>%
+filter(env_material_s == "sebum") %>%
+filter(sex_s == "male") %>%
+  pull(pident) %>%
+  hist(main = "Male Percent Identity of Sebum",
+       xlab = "Percent",
+       col = "skyblue")
+```
+
+**figureee**: 
+
 ```{r example-phyloseq-plot-1}
 # alpha diversity metrics
 plot_richness(phyloseq_obj,
@@ -280,6 +308,25 @@ plot_richness(phyloseq_obj,
 
 **Figure 1**: Alpha diversity measures of the two sample types, colored by gender.
 
+```{r plot-ordination-of-taxa-by-sex}
+set.seed(15)
+#Pruning to subset the dataset 
+pruned_phyloseq <- subset_samples(phyloseq_obj, sex_s != "Not applicable")
+pruned_ord <- ordinate(pruned_phyloseq, "NMDS", "bray")
+
+p1 = plot_ordination(pruned_phyloseq, pruned_ord,
+                     type = "samples",
+                     color = "sex_s",
+                     title = "Ordination of Male versus Female Sequences")
+print(p1)
+#Create Plot Ordination showing the phylum present by sex
+GP.ord <- ordinate(GP1, "NMDS", "bray")
+p1 = plot_ordination(GP1, GP.ord, type = "taxa", color = "Phylum", title = "taxa")
+print(p1)
+```
+
+**FIGUREEEEEEE**:
+
 ```{r example-phyloseq-plot-2}
 # phylogeny, yay!
 plot_tree(phyloseq_obj,
@@ -289,6 +336,13 @@ plot_tree(phyloseq_obj,
 
 **Figure 2**: Inferred phylogeny of sequences, with points on tips representing samples within which each particular taxa occurred. Tree represents maximum likelihood phylogeny inferred using RAxML.
 
+install.packages("RColorBrewer")
+
+```{r bar-plot-of-phlyum-presence-by-sex}
+plot_bar(pruned_phyloseq, x = "sex_s", y = "Abundance", fill = "Phylum",
+ title = NULL, facet_grid = NULL) +
+  scale_fill_brewer(palette = "Paired")
+```
 
 # Discussion
 
