add references to ref.bib

--- a/references.bib
+++ b/references.bib
@@ -18,3 +18,91 @@
   year = {2013},
   url = {http://dx.plos.org/10.1371/journal.pone.0061217},
 }
+
+@article{grice2011skin,
+  title={The skin microbiome},
+  author={Grice, Elizabeth A and Segre, Julia A},
+  journal={Nature Reviews Microbiology},
+  volume={9},
+  number={4},
+  pages={244--253},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{olsen1986microbial,
+  title={Microbial ecology and evolution: a ribosomal RNA approach},
+  author={Olsen, Gary J and Lane, David J and Giovannoni, Stephen J and Pace, Norman R and Stahl, David A},
+  journal={Annual reviews in microbiology},
+  volume={40},
+  number={1},
+  pages={337--365},
+  year={1986},
+  publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+
+@article{woese1987bacterial,
+  title={Bacterial evolution.},
+  author={Woese, Carl R},
+  journal={Microbiological reviews},
+  volume={51},
+  number={2},
+  pages={221},
+  year={1987},
+  publisher={American Society for Microbiology (ASM)}
+}
+
+@article{grice2008diversity,
+  title={A diversity profile of the human skin microbiota},
+  author={Grice, Elizabeth A and Kong, Heidi H and Renaud, Gabriel and Young, Alice C and Bouffard, Gerard G and Blakesley, Robert W and Wolfsberg, Tyra G and Turner, Maria L and Segre, Julia A},
+  journal={Genome research},
+  volume={18},
+  number={7},
+  pages={1043--1050},
+  year={2008},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{fierer2008influence,
+  title={The influence of sex, handedness, and washing on the diversity of hand surface bacteria},
+  author={Fierer, Noah and Hamady, Micah and Lauber, Christian L and Knight, Rob},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={105},
+  number={46},
+  pages={17994--17999},
+  year={2008},
+  publisher={National Acad Sciences}
+}
+
+@article{fierer2010forensic,
+  title={Forensic identification using skin bacterial communities},
+  author={Fierer, Noah and Lauber, Christian L and Zhou, Nick and McDonald, Daniel and Costello, Elizabeth K and Knight, Rob},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={107},
+  number={14},
+  pages={6477--6481},
+  year={2010},
+  publisher={National Acad Sciences}
+}
+
+@article{pochi1974endocrinologic,
+  title={Endocrinologic Control to the Development and Activity of the Human Sebaceous Gland},
+  author={Pochi, Peter E and Strauss, John S},
+  journal={Journal of Investigative Dermatology},
+  volume={62},
+  number={3},
+  pages={191--201},
+  year={1974},
+  publisher={Elsevier}
+}
+
+@article{stackebrandt1994taxonomic,
+  title={Taxonomic note: a place for DNA-DNA reassociation and 16S rRNA sequence analysis in the present species definition in bacteriology},
+  author={Stackebrandt, EaBMG and Goebel, BM},
+  journal={International Journal of Systematic and Evolutionary Microbiology},
+  volume={44},
+  number={4},
+  pages={846--849},
+  year={1994},
+  publisher={Microbiology Society}
+}
