--- a/Analysis_Report_01_amplicons.Rmd
+++ b/Analysis_Report_01_amplicons.Rmd
@@ -23,7 +23,6 @@ csl: bioinformatics.csl
 
   The process to computationally parse and analyze the data gathered was accomplished using a systematic workflow. The first step was to install all the necessary packages needed to get the dataset in the best suited format possible. In particular, the two most important packages that were installed were DADA2 and phyloseq. DADA2 is a type of open-software package that’s designed to model and correct Illumina-sequenced amplicon errors. It is able to directly extrapolate sequences and accurately resolve any error in as little as 1 nucleotide base [@callahan2016]. The phyloseq pack is also an open-software. This software project was made to preform analysis of microbiome census data present in R. It imports data and allows a user to preform various types of analysis like subsetting, multi-table comparisons, and diversity analysis [@mcmurdie2013]. This package essentially allowed me to make the different figures comparing the data between men and women. The metadata set was first downloaded from the NCBI database. Then through the creation of a fastq processing script, the metadata was thoroughly trimmed based on a set of parameters determined from the 454 sequencer. From here, DADA2 does its job to check for errors in each of the samples. After doing quality checks on the trimmed and denoised sequences, chimeras were removed from the sequences in order to obtain a clean read. Chimeras are formed from two miscloned and joined DNA sequences. The cleaned sequences variants were assigned taxonomy based on known sequences and then a phylogeny was created from a fasta file format of the data. A phyloseq object was constructed from the DADA2 output. 
 
-
 # Results
 
 ```{r load-libraries, message = FALSE}
@@ -350,7 +349,8 @@ plot_bar(pruned_phyloseq, x = "Class", fill = "sex_s")
 
 # Discussion
 
-Add around 2-3 pages interpreting your results and considering future directions one might take in analyzing these data.
+  The majority of the results were formed through taking smaller sets of the whole metadata and outputting it in the form of different plots. Based on the results the figures showed, female hands contained a higher microbial diversity than within the sebum on male hands. Using different types of plots helped to thoroughly test the different aspects that are involved in the biodiversity of the microorganisms. The first thing that I decided to investigate from the data was richness (Figure 1 and 2). Ecologically, richness shows the number of different species that are represented within the community. Plotting just the diversity in male and female sebum from the observed data (Figure 2), I was able to see that male sebum had a more concentrated and lower alpha diversity in presented across the samples than female sebum did. This was further supported when the samples were plotted using Shannon diversity. Shannon diversity looks at both abundance and evenness within the present species. These results show that across all the samples, the male sebum didn’t contain as many different microbial communities as the female sebum did. It also shows that within the microorganisms found on males, there was much less evenness which lead me to believe that there must be some microbial communities that are more highly represented than others. 
+  This discovery in my dataset pushed me to further investigate what are the types of microbial communities that dominate male and female sebum in the hopes of further understanding what makes the sebum types different. Making plot ordinations and a phylogeny tree gave me a preliminary view on the ordering of the taxa and phylum present within the samples and comparing them between men and women (Figure 3,4, and 5). I then decided to take a closer look at the abundance of taxa and phylum through the creation of bar plots (Figure 6 and 7). These plots gave me the most compelling data in my research. When looking at taxonomy, Proteobacteria, Cyanobacteria, and Actinobacteria were the three most highly present taxa found in both samples. When I compared males and females, males exhibited a higher abundance in Proteobacteria than females which further supports the findings in my earlier graphs that showed the proportion in evenness in male and female sebum. Looking at phylum, females exhibited more alphaproteobacteria and betaproteobacteria was more present in males. Based on these results, I could conclude that although females and males exhibit some similarities in taxonomy, physiological differences between the genders accounts for the variating presence and abundance of different types of microbial communities. Investigating these findings further is advised and doing more background checks on the participants is advised because pH, hygiene, and environment exposure are all compelling factors that shape the microbial communities on each individual’s hands.
 
 # Sources Cited
 
